--- a/index.html
+++ b/index.html
@@ -1,183 +1,150 @@
 <!DOCTYPE html>
 <html lang="bn">
 <head>
-  <meta charset="UTF-8" />
-  <title>Live Stream Player</title>
-  <script src="https://cdn.jsdelivr.net/npm/shaka-player@latest/dist/shaka-player.compiled.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
+  <meta charset="UTF-8">
+  <title>Live Match - BDStreamHub</title>
   <style>
-    body { background: #000; color: #fff; font-family: sans-serif; margin: 0; text-align: center; }
-    video { width: 100%; max-width: 800px; background: black; }
-    #team-logos img { max-height: 60px; margin: 0 10px; vertical-align: middle; }
-    #countdown, #notice { margin: 10px 0; font-size: 18px; }
-    #watermark-text {
-      position: fixed;
+    body {
+      font-family: Arial, sans-serif;
+      background: #111;
+      color: #fff;
+      margin: 0;
+      padding: 20px;
+    }
+    .match-container {
+      background: #1c1c1c;
+      border-radius: 10px;
+      margin-bottom: 30px;
+      padding: 20px;
+      position: relative;
+      box-shadow: 0 0 10px #000;
+    }
+    .match-title {
+      font-size: 22px;
+      font-weight: bold;
+      text-align: center;
+    }
+    .logos {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-top: 10px;
+    }
+    .team-logo {
+      width: 60px;
+      height: 60px;
+      border-radius: 50%;
+      object-fit: cover;
+    }
+    .player-wrapper {
+      position: relative;
+      margin-top: 15px;
+    }
+    video {
+      width: 100%;
+      border-radius: 10px;
+    }
+    .watermark {
+      position: absolute;
+      top: 10px;
       right: 10px;
-      bottom: 10px;
-      font-size: 14px;
-      color: rgba(255,255,255,0.6);
-      background: rgba(0,0,0,0.5);
-      padding: 4px 8px;
-      border-radius: 4px;
-      z-index: 1000;
+      opacity: 0.7;
+      z-index: 9;
       pointer-events: none;
     }
-    #controls { margin-top: 5px; display: flex; justify-content: center; gap: 15px; align-items: center; }
-    #qualitySelector, #muteBtn, #pipBtn {
-      background: #222; color: white; border: none; padding: 5px 10px; border-radius: 4px; font-size: 14px; cursor: pointer;
+    .watermark img {
+      width: 80px;
     }
-    .overlay { background: rgba(0,0,0,0.7); padding: 5px; position: absolute; top: 5px; left: 5px; z-index: 10; }
+    .sponsor {
+      text-align: center;
+      margin-top: 10px;
+    }
+    .sponsor img {
+      max-width: 100%;
+      border-radius: 10px;
+    }
+    .notice-box {
+      background: #222;
+      border-left: 5px solid #0ff;
+      padding: 10px;
+      margin: 15px 0;
+      font-size: 14px;
+    }
+    .countdown {
+      text-align: center;
+      font-size: 18px;
+      margin-top: 10px;
+      color: #0f0;
+    }
   </style>
 </head>
 <body>
-  <img id="logo" alt="Logo" />
-  <div id="team-logos">
-    <img id="team1" alt="Team 1" />
-    <img id="team2" alt="Team 2" />
-  </div>
-  <h2 id="match-title">Live Match</h2>
-  <div id="countdown">Loading...</div>
-  <marquee id="notice">Loading notice...</marquee>
 
-  <div style="position:relative; max-width:800px; margin: auto;">
-    <video id="video" controls autoplay playsinline crossorigin="anonymous"></video>
-    <div class="overlay" id="status">Initializing...</div>
-  </div>
-
-  <div id="controls">
-    <button id="muteBtn">Mute 🔇</button>
-    <button id="pipBtn">PiP ▶️</button>
-    <select id="qualitySelector" style="display:none;"></select>
-  </div>
-
-  <img id="sponsor" style="width: 100%; margin-top: 15px; max-height: 90px; object-fit: contain" />
-  <div id="watermark-text">BDStreamHub</div>
+  <h2>📺 লাইভ ম্যাচ সমূহ</h2>
+  <div id="matchesContainer"></div>
 
   <script>
-    const c = JSON.parse(localStorage.getItem("liveConfig") || "{}");
-    const start = c.startTime ? new Date(c.startTime).getTime() : Date.now();
+    const matches = JSON.parse(localStorage.getItem("matches")) || [];
 
-    document.getElementById("logo").src = c.logo || "";
-    document.getElementById("team1").src = c.team1 || "";
-    document.getElementById("team2").src = c.team2 || "";
-    document.getElementById("sponsor").src = c.sponsor || "";
-    document.getElementById("notice").innerText = c.notice || "";
-    document.getElementById("match-title").innerText = c.matchTitle || "Live Match";
+    function renderMatches() {
+      const now = new Date().getTime();
+      const container = document.getElementById("matchesContainer");
+      container.innerHTML = "";
 
-    function tick() {
-      const diff = start - Date.now();
-      const ctn = document.getElementById("countdown");
-      if (diff > 0) {
-        const m = Math.floor(diff / 60000), s = Math.floor((diff % 60000) / 1000);
-        ctn.innerText = `ম্যাচ শুরু হবে ${m}মি ${s}সেকেন্ডে`;
-      } else {
-        ctn.innerText = "🔴 LIVE চলছে";
-      }
-    }
-    setInterval(tick, 1000); tick();
+      matches.forEach((match, index) => {
+        const matchTime = new Date(match.startTime).getTime();
+        const isUpcomingOrLive = matchTime > now || now - matchTime < 6 * 60 * 60 * 1000;
 
-    const vid = document.getElementById("video"),
-          st = document.getElementById("status"),
-          muteBtn = document.getElementById("muteBtn"),
-          pipBtn = document.getElementById("pipBtn"),
-          qualitySelector = document.getElementById("qualitySelector");
+        if (!isUpcomingOrLive) return;
 
-    muteBtn.onclick = () => {
-      vid.muted = !vid.muted;
-      muteBtn.textContent = vid.muted ? "Unmute 🔈" : "Mute 🔇";
-    };
+        const div = document.createElement("div");
+        div.className = "match-container";
+        div.innerHTML = `
+          <div class="match-title">${match.title}</div>
+          <div class="logos">
+            <img src="${match.teamLogo1}" class="team-logo">
+            <img src="${match.teamLogo2}" class="team-logo">
+          </div>
 
-    pipBtn.onclick = async () => {
-      try {
-        if (document.pictureInPictureElement) {
-          await document.exitPictureInPicture();
-        } else {
-          await vid.requestPictureInPicture();
-        }
-      } catch (e) {
-        alert("Picture-in-Picture মোড সম্ভব নয়।");
-      }
-    };
+          <div class="player-wrapper">
+            <video id="video${index}" controls poster="" autoplay muted>
+              <source src="${match.streamURL}" type="application/x-mpegURL">
+            </video>
+            <div class="watermark"><img src="${match.logoURL}" alt="Watermark"></div>
+          </div>
 
-    async function loadShaka(stream, licenseUrl) {
-      shaka.polyfill.installAll();
-      const player = new shaka.Player(vid);
+          <div class="notice-box">${match.notice}</div>
+          <div class="countdown" id="countdown${index}">Loading countdown...</div>
 
-      if (licenseUrl) {
-        player.configure({ drm: { servers: { "com.widevine.alpha": licenseUrl } } });
-      }
+          <div class="sponsor"><img src="${match.sponsorBanner}" alt="Sponsor"></div>
+        `;
+        container.appendChild(div);
 
-      player.getNetworkingEngine().registerRequestFilter((type, req) => {
-        if (type === shaka.net.NetworkingEngine.RequestType.LICENSE) {
-          req.headers["Referer"] = location.origin;
-        }
+        updateCountdown(match.startTime, `countdown${index}`);
+        setInterval(() => updateCountdown(match.startTime, `countdown${index}`), 1000);
       });
-
-      await player.load(stream);
-      st.innerText = "▶️ LIVE (DASH DRM)";
-
-      const tracks = player.getVariantTracks();
-      qualitySelector.innerHTML = "";
-      const uniq = [];
-      tracks.forEach(t => {
-        if (!uniq.some(q => q.height === t.height)) uniq.push(t);
-      });
-
-      uniq.sort((a, b) => a.height - b.height);
-      uniq.forEach(track => {
-        const opt = document.createElement("option");
-        opt.value = track.id;
-        opt.text = `${track.height}p (${Math.round(track.bandwidth / 1000)} kbps)`;
-        qualitySelector.appendChild(opt);
-      });
-
-      if (uniq.length > 1) qualitySelector.style.display = "inline-block";
-      qualitySelector.onchange = () => {
-        const id = parseInt(qualitySelector.value);
-        player.selectVariantTrack(player.getVariantTracks().find(t => t.id === id), true);
-      };
     }
 
-    async function loadHLS(stream) {
-      if (Hls.isSupported()) {
-        const hls = new Hls();
-        hls.loadSource(stream);
-        hls.attachMedia(vid);
-        st.innerText = "▶️ LIVE (HLS)";
-        hls.on(Hls.Events.MANIFEST_PARSED, function (event, data) {
-          if (data.levels.length > 1) {
-            qualitySelector.innerHTML = "";
-            data.levels.forEach((lvl, i) => {
-              const opt = document.createElement("option");
-              opt.value = i;
-              opt.text = `${lvl.height}p`;
-              qualitySelector.appendChild(opt);
-            });
-            qualitySelector.style.display = "inline-block";
-            qualitySelector.onchange = () => {
-              hls.currentLevel = parseInt(qualitySelector.value);
-            };
-          }
-        });
-      } else {
-        vid.src = stream;
-        st.innerText = "▶️ LIVE (MP4)";
+    function updateCountdown(startTime, elementId) {
+      const countdownEl = document.getElementById(elementId);
+      const matchTime = new Date(startTime).getTime();
+      const now = new Date().getTime();
+      const distance = matchTime - now;
+
+      if (distance < 0) {
+        countdownEl.innerHTML = "✅ লাইভ চলছে...";
+        return;
       }
+
+      const days = Math.floor(distance / (1000 * 60 * 60 * 24));
+      const hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+      const minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+      const seconds = Math.floor((distance % (1000 * 60)) / 1000);
+
+      countdownEl.innerHTML = `শুরু হতে বাকি: ${days} দিন ${hours} ঘণ্টা ${minutes} মিনিট ${seconds} সেকেন্ড`;
     }
 
-    (async () => {
-      vid.muted = false; // Start with sound on
-      muteBtn.textContent = "Mute 🔇";
-      if (c.stream) {
-        if (c.stream.includes(".mpd")) {
-          await loadShaka(c.stream, c.license);
-        } else {
-          await loadHLS(c.stream);
-        }
-      } else {
-        st.innerText = "❌ Stream URL Not Found!";
-      }
-    })();
+    renderMatches();
   </script>
 </body>
 </html>
