--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 </head>
 <body>
 
-  <div class="page-title">BDStreamHub Live</div>
+  <div class="page-title">BDStreamHub Live BANGLADESH vs SINGAPORE</div>
 
   <!-- Scrolling Notice Above Player -->
   <div class="scrolling-notice-container" aria-live="polite" aria-atomic="true" role="region" id="scrollingNoticeContainer">
@@ -306,7 +306,7 @@
       void scrollingNotice.offsetWidth; // trigger reflow
       scrollingNotice.style.animation = null;
     }
-    setScrollingNotice("লাইভ ম্যাচ দেখুন Ecuador vs Brazil! ভিডিও প্লে হতে ১ বার ভিডিও প্লে বাটনে টার্চ করুন তাহলে প্লে হয়ে যাবে! BDStreamHub আপনার সাথে।");
+    setScrollingNotice("আসসালামু আলাইকুম বিডিস্ট্রিমহাব আপনাকে স্বাগতম! ভিডিও প্লে হতে ১ বার ভিডিও প্লে বাটনে টার্চ করুন তাহলে প্লে হয়ে যাবে! BDStreamHub আপনার সাথে। জয়েন টেলিগ্রাম @Bdstreamhub");
 
     video.muted = isMuted; // Set initial mute state
     video.autoplay = true;
