--- a/index.html
+++ b/index.html
@@ -226,7 +226,8 @@
 
   <script>
     // Elements
-    const videoSrc = "http://38.96.178.201/live/TSports/index.m3u8";
+    const videoSrc = "https://prod-fastly-ap-southeast-1.video.pscp.tv/Transcoding/v1/hls/WrxIkQt-9nVB5_5SOnWcx-TxdMocy5KW4sFwkKyOR7Tjmp5oaYlN8iMvyDiN95SNBNpANChb2jyT-pXweLjxXw/transcode/ap-southeast-1/periscope-replay-direct-prod-ap-southeast-1-public/eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCIsInZlcnNpb24iOiIyIn0.eyJFbmNvZGVyU2V0dGluZyI6ImVuY29kZXJfc2V0dGluZ18xMDgwcDMwXzEwIiwiSGVpZ2h0IjoxMDgwLCJLYnBzIjo1NTAwLCJXaWR0aCI6MTkyMH0.OImMZabKYJ0cs9CnIapU-4aBk6KNBiJxi1hh-6l4BZ4/dynamic_highlatency.m3u8?type=live
+";
     const video = document.getElementById('video');
     const playPause = document.getElementById('playPause');
     const muteButton = document.getElementById('muteButton'); // Mute button
