--- a/index.html
+++ b/index.html
@@ -226,8 +226,7 @@
 
   <script>
     // Elements
-    const videoSrc = "https://prod-fastly-ap-southeast-1.video.pscp.tv/Transcoding/v1/hls/WrxIkQt-9nVB5_5SOnWcx-TxdMocy5KW4sFwkKyOR7Tjmp5oaYlN8iMvyDiN95SNBNpANChb2jyT-pXweLjxXw/transcode/ap-southeast-1/periscope-replay-direct-prod-ap-southeast-1-public/eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCIsInZlcnNpb24iOiIyIn0.eyJFbmNvZGVyU2V0dGluZyI6ImVuY29kZXJfc2V0dGluZ18xMDgwcDMwXzEwIiwiSGVpZ2h0IjoxMDgwLCJLYnBzIjo1NTAwLCJXaWR0aCI6MTkyMH0.OImMZabKYJ0cs9CnIapU-4aBk6KNBiJxi1hh-6l4BZ4/dynamic_highlatency.m3u8?type=live
-";
+    const videoSrc = "https://live-test.tsports.com/live-02/index.m3u8?hdntl=Expires=1749590955~_GO=Generated~URLPrefix=aHR0cHM6Ly9saXZlLXRlc3QudHNwb3J0cy5jb20v~Signature=AXWJlB7cPsvwL3XGMDQqxQrioMpzkEvm-i0t0Q8aRbay9Hy8hqbSH679v3SiSFVdZpedjLDY2-ht6N_8-Cirppj8MlcF&hdnts=URLPrefix=aHR0cHM6Ly9saXZlLXRlc3QudHNwb3J0cy5jb20v~Expires=1749558552300~hmac=a7505ba4b87e79fec5f51953faffa10c75df1d6af7592c2d767d25451f39c30a";
     const video = document.getElementById('video');
     const playPause = document.getElementById('playPause');
     const muteButton = document.getElementById('muteButton'); // Mute button
